feat:实现导航栏路由跳转

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,9 @@
       "~/*": ["./*"],
       "@/*": ["./*"],
       "~~/*": ["./*"],
-      "@@/*": ["./*"]
+      "@@/*": ["./*"],
+      "@home/*":["./components/home/*"],
+      "@admin/*":["./components/admin/*"]
     }
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
