--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "element-ui": "^2.15.6",
+    "highlight.js": "^11.4.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
