--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "dayjs": "^1.10.8",
     "element-ui": "^2.15.6",
     "highlight.js": "^11.4.0",
     "nuxt": "^2.15.8",
