--- a/package.json
+++ b/package.json
@@ -18,7 +18,20 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "blueimp-md5": "^2.19.0",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "formidable": "^2.0.1",
+    "joi": "^17.5.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.1.4",
+    "nodemailer": "^6.7.2",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "trim-html": "^0.1.9",
+    "wangeditor": "^4.7.11",
+    "xss": "^1.0.10"
   },
   "devDependencies": {
     "sass": "^1.26.5",
