--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "blog-base-nuxt",
-  "version": "1.0.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "server": "node server/app"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
