--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "blueimp-md5": "^2.19.0",
+    "body-parser": "^1.19.1",
     "core-js": "^3.19.3",
     "dayjs": "^1.10.8",
     "element-ui": "^2.15.6",
-    "highlight.js": "^11.4.0",
-    "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
-    "blueimp-md5": "^2.19.0",
-    "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "formidable": "^2.0.1",
+    "highlight.js": "^11.4.0",
     "joi": "^17.5.0",
     "lodash": "^4.17.21",
+    "mkdirp": "^1.0.4",
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
     "nodemailer-smtp-transport": "^2.7.4",
+    "nuxt": "^2.15.8",
     "trim-html": "^0.1.9",
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
     "wangeditor": "^4.7.11",
+    "webpack": "^4.46.0",
     "xss": "^1.0.10"
   },
   "devDependencies": {
