--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "server": "node server/app"
+    "server": "node ./server/app.js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
