--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "blog-base-nuxt",
-  "version": "0.1.2",
+  "version": "0.1.16",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "server": "node server/app"
+    "server": "node ./server/app.js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
